--- a/style.css
+++ b/style.css
@@ -1,29 +1,73 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin: 20px;
-      }
-      textarea {
-        width: 80%;
-        height: 100px;
-        margin-bottom: 10px;
-      }
-      button {
-        padding: 10px;
-        font-size: 16px;
-        color: blue;
-      }
-      #resultado {
-        border: 1px solid #ccc;
-        padding: 10px;
-        width: 80%;
-        margin: 10px auto;
-        white-space: pre-wrap;
-      }
-      footer {
-        margin-top: 20px;
-        font-size: 12px;
-        color: #777;
-      }
-    
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+}
+
+header img {
+  max-width: 100px;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  
+  justify-content: space-between;
+  margin: 20px;
+}
+
+#texto {
+  width: 300px;
+  height: 500px;
+
+  box-sizing: border-box;
+}
+
+#resultado {
+  width: 300px;
+  height: 500px;
+  box-sizing: content-box;
+  border: 1px solid #ccc;
+}
+
+#resultado img{
+  width: 300px;
+  height: 500px;
+}
+
+#button-row{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+button {
+  
+  width: 45%;
+  padding: 10px;
+  box-sizing: border-box;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
+
