--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #CCCCCC;
 }
 
 header {
-  background-color: #333;
-  color: #fff;
+  background-color: #555555;
+  color: #F2F2F2;
   padding: 10px;
   text-align: center;
 }
@@ -16,21 +17,49 @@ header img {
   max-width: 100px;
 }
 
-main {
+/*main {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-evenly;
   align-items: center;
-  
-  justify-content: space-between;
-  margin: 20px;
+  width: 70%; 
+  height: 80%;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  margin-left: 15%;
+  margin-right: 15%;
+  padding: 0; 
+}*/
+
+#flex-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 70%; 
+  height: 80%;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  margin-left: 15%;
+  margin-right: 15%;
+  padding: 0; 
 }
 
 #texto {
   width: 300px;
   height: 500px;
+  background-color: #777777;
 
   box-sizing: border-box;
+
 }
+
+#text::placeholder{
+  color: #333333;
+  font-size: large;
+  opacity: 1;
+}
+
+
 
 #resultado {
   width: 300px;
@@ -44,30 +73,57 @@ main {
   height: 500px;
 }
 
-#button-row{
+.button-row {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  align-items: flex-start;
+  justify-content: space-around;
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 5px;
+  margin-bottom: 300px;
 }
 
 button {
-  
-  width: 45%;
-  padding: 10px;
-  box-sizing: border-box;
-  margin-top: 10px;
-  margin-bottom: 10px;
+font-family: Bebas Neue;
+font-weight: 0;
+font-size: 14px;
+color: #F2F2F2;
+background: linear-gradient(90deg, #333333 0%, #999999 100%);
+padding: 10px 30px;
+border: 2px solid #333333;
+box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+border-radius: 50px;
+transition : 1000ms;
+transform: translateY(0);
+display: flex;
+flex-direction: row;
+align-items: center;
+cursor: pointer;
 }
 
+button:hover{
+transition : 1000ms;
+padding: 10px 50px;
+transform : translateY(-0px);
+background: linear-gradient(90deg, #333333 0%, #999999 100%);
+color: #333333;
+border: solid 2px #333333;
+}
+
+
+
+
 footer {
-  background-color: #333;
-  color: #fff;
+  background-color: #555555;
+  color: #F2F2F2;
   text-align: center;
   padding: 10px;
   position: relative;
   bottom: 0;
   width: 100%;
 }
+
+
 
