--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
+  background-image: url("./imgs/img_lupa.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
+  background-size: 100vh;
+  background-color: #555555;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #CCCCCC;
 }
 
 header {
@@ -30,7 +40,7 @@ header img {
   padding: 0; 
 }*/
 
-#flex-container{
+.flex-container{
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
