--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Barriecito&family=Kode+Mono:wght@400..700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -13,30 +15,39 @@ body {
   background-color: #555555;
   font-family: Arial, sans-serif;
   box-sizing: border-box;
-  
 }
 
+
 header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #555555;
+  font-family: "Barriecito", system-ui;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 500;
   color: #F2F2F2;
   padding: 2px;
   text-align: center;
 }
 
 header img {
-  max-width: 100px;
+  width: 40px;
 }
 
 
 .container{
+  width: 90%; /* Defina a largura desejada */
+  max-width: 800px; /* Defina a largura máxima se desejar */
+  margin: 7% auto; /* Define as margens automáticas para centralizar */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  align-items: center;
-  margin: 5%;
-  gap: 10px 20px;
+  gap: 70px 20px;
   flex-wrap: wrap;
+
 }
 
 .container__text{
@@ -59,8 +70,22 @@ header img {
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(6.4px);
   border: 1px solid #777777;
+  padding: 10px;
+  font-family: "Kode Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 20px;
+  color: #F2F2F2;
 }
 
+textarea::placeholder {
+  font-family:  'Roboto', sans-serif, #F2F2F2 ;
+  color: #333333;
+  font-weight: lighter;
+  font-size: 20px;
+  padding: 10px;
+ }
 
 
 
@@ -69,31 +94,46 @@ width: 300px;
 height: 500px;
 box-sizing: content-box;
 border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+box-shadow: 0 4px 40px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(6.4px);
 -webkit-backdrop-filter: blur(6.4px);
 border: 1px solid #777777;
+padding: 10px;
+  font-family: "Kode Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 20px;
+  color: #F2F2F2;
 }
 
+.encrypted-label {
+  font-weight: bold;
+  color: #333333;
+  font-size: 25px;
+}
 
 .button-row {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: space-around;
-  width: 50%;
-  margin-left: 25%;
-  margin-right: 25%; 
+  justify-content: space-between;
+  width: 70%;
+  
+  
 }
 
 button {
 font-family: Bebas Neue;
-font-weight: 0;
-font-size: 14px;
-color: #F2F2F2;
-background: linear-gradient(90deg, #333333 0%, #999999 100%);
+font-weight: bolder;
+font-size: 20px;
+color: #333333;
+background-color: transparent;
+backdrop-filter: blur(15px);
+-webkit-backdrop-filter: blur(15px);
+border: 1px solid #777777;
 padding: 10px 30px;
-border: 2px solid #333333;
+border: 1px solid #777777;
 box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
 border-radius: 50px;
 transition : 1000ms;
@@ -101,7 +141,8 @@ transform: translateY(0);
 display: flex;
 flex-direction: row;
 align-items: center;
-cursor: pointer;
+cursor: grab;
+
 }
 
 button:hover{
@@ -109,7 +150,7 @@ transition : 1000ms;
 padding: 10px 50px;
 transform : translateY(-0px);
 background: linear-gradient(90deg, #333333 0%, #999999 100%);
-color: #333333;
+color: #F2F2F2;
 border: solid 2px #333333;
 }
 
