--- a/style.css
+++ b/style.css
@@ -158,6 +158,12 @@ border: solid 2px #333333;
 
 
 footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  font-weight: bold;
+  align-items: center;
   background-color: #555555;
   color: #F2F2F2;
   text-align: center;
@@ -165,7 +171,10 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
+  height:  40px;
 }
-
+ i{
+  color: #F2F2F2;
+ }
 
 
